[gd_scene load_steps=7 format=3 uid="uid://brl0ha628jxif"]

[ext_resource type="Script" path="res://Scripts/NPC.gd" id="1_txgmd"]
[ext_resource type="PackedScene" uid="uid://2xhtwxpgnyd8" path="res://Scenes/UIs/dialog_ui_npc.tscn" id="2_kkecn"]
[ext_resource type="Script" path="res://Scripts/EnvElements/Interactable.gd" id="3_fuxog"]
[ext_resource type="Script" path="res://Scripts/Memory.gd" id="4_careh"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0ka84"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wapxf"]
radius = 0.673729

[node name="NPC" type="CharacterBody3D"]
script = ExtResource("1_txgmd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_0ka84")

[node name="dialogUI" parent="." instance=ExtResource("2_kkecn")]
unique_name_in_owner = true

[node name="Interactable" type="Area3D" parent="." node_paths=PackedStringArray("tooltip_origin")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("3_fuxog")
tooltip_text = "Talk"
tooltip_origin = NodePath("Node3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Interactable"]
shape = SubResource("CapsuleShape3D_wapxf")

[node name="Node3D" type="Node3D" parent="Interactable"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.66539, 0)

[node name="Memory" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_careh")

[connection signal="interacted" from="Interactable" to="." method="_on_interacted"]
[connection signal="learned" from="Memory" to="." method="_on_memory_learned"]
